@@ -1,3 +1,9 @@
+Thu Mar  3 21:21:42 2011  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* test/ruby/test_process.rb (test_execopts_redirect): redirecting fd
+	  >= 3 is not supported on Windows, so should not specify such options
+	  when calling spawn or others.
+
 Sat May 14 12:20:22 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
 
 	* strftime.c (STRFTIME):  return 0 and ERANGE when precision is too
